...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sek-fb-R3z">
                                <rect key="frame" x="159.33333333333334" y="622.33333333333337" width="83.666666666666657" height="32.666666666666629"/>
                                <accessibility key="accessibilityConfiguration" identifier="logInButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Sek-fb-R3z" secondAttribute="height" multiplier="41:16" id="8Zh-0r-EoR"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="82K-bv-Bsz">
                                <rect key="frame" x="36" y="409" width="319" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailText"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="82K-bv-Bsz" secondAttribute="height" multiplier="319:34" id="jdC-1B-8Td"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HXU-CP-8pa">
                                <rect key="frame" x="36" y="528" width="319" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordText"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="HXU-CP-8pa" secondAttribute="height" multiplier="319:34" id="pRD-qO-7vF"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HdB-Qz-0Go">
                                <rect key="frame" x="156.66666666666666" y="720.33333333333337" width="88.666666666666657" height="31.666666666666629"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="HdB-Qz-0Go" secondAttribute="height" multiplier="87:31" id="faZ-15-UyV"/>
...
                                <rect key="frame" x="39" y="284" width="315" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerEmailText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="39" y="392" width="315" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstnameText" label="registerFirstnameText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="39" y="602" width="315" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerPasswordText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="39" y="503" width="315" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerLastnameText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="124" y="681" width="127" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="15"/>
                                <color key="tintColor" systemColor="systemBrownColor"/>
...
                        <viewLayoutGuide key="safeArea" id="dzP-MH-Emg"/>
                        <color key="backgroundColor" systemColor="systemMintColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="registerBackgroundView"/>
                    </view>
                    <navigationItem key="navigationItem" id="FQ5-f8-UiN"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="9wr-eF-lMX">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="line.3.horizontal" catalog="system" id="Vaq-N4-tor" userLabel="Side Menu Button"/>
                    </navigationItem>
                    <connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="SideMenuTable" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutor
                                <rect key="frame" x="0.0" y="191" width="280" height="627"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
