...
                    
                }
                else{
                    //update application set so the user does not have to sign out and sign back in for friend to appear.
                    UserSession.shared.friends.insert(self.user!.id)
                    let message = "Friend Added"
                    let alert = UIAlertController(title: "Success", message: message, preferredStyle: .alert)
                    alert.addAction(UIAlertAction(title: "Ok", style: .default) { _ in
                        // Navigate to Hello after the alert is dismissed
    //                        self.performSegue(withIdentifier: "registerToHello", sender: self)
                    })
                    self.present(alert, animated: true, completion: nil)
                    
...
